# airflow_series

./: pyproject.toml
dags/: 01_first_dag.py  02_python_operator.py  03_backfilling.py  04_xcom.py
